--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -20,13 +20,16 @@ build:
 
 deploy:
   helm:
+    flags:
+      upgrade: ["--timeout", "600s"]
+      install: ["--timeout", "600s"]
     releases:
-      - name: springtrader 
+      - name: springtrader
         chartPath: ./charts/springtrader
         wait: true
         values:
-          image: springtrader 
-          sqlfdb: sqlfdb 
+          image: springtrader
+          sqlfdb: sqlfdb
         setValueTemplates:
           istioDomain: "{{.ISTIO_DOMAIN}}"
           productName: "{{.PRODUCT_NAME}}"
@@ -37,5 +40,5 @@ profiles:
   patches:
   - op: add
     path: /deploy/helm/releases/0/setValues
-    value: 
+    value:
       storageClassName: standard
